# IU5-Sem2-Project

./: main.cpp  main2.cpp
board/: CMakeLists.txt  board.cpp  board.h
game/: CMakeLists.txt  game.h
graphics/: CMakeLists.txt  graphics.h
piece/: CMakeLists.txt  piece.h
